--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     <section class="sec10">
         <h2>SIGN-UP</h2>
         <div class="sec10a1">
-            <form action="page3.html">
+            <form action="page3.html" onsubmit="return val()">
                 <div class="sec10a1b1">
                     <i class="fa-solid fa-user lock" ></i>
                     <input type="text" placeholder="First Name" class="sec10a1b1c1" id="fname">
