--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
     <section class="sec10">
         <h2>SIGN-IN</h2>
         <div class="sec10a1">
-            <form action="page3.html">
+            <form action="page4.html" onsubmit="return up()">
                 
                 <div class="sec10a1b2">
                     <i class="fa-solid fa-envelope lock"></i>
