--- a/page3.html
+++ b/page3.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="sec10a1b2">
                     <i class="fa-solid fa-lock lock"></i>
-                    <input type="email" placeholder="Password" class="sec10a1b1c1" id="password">
+                    <input type="text" placeholder="Password" class="sec10a1b1c1" id="pword">
                 </div>
                 
                 <div class="sec10a1b2">
