--- a/page6.html
+++ b/page6.html
@@ -53,6 +53,22 @@
             </ul>
         </div>
     </nav>
+    <hr>
+    <section id="sec14">
+        
+<table border="" align="center">
+    <thead>
+        <th>Name</th>
+        <th>Size</th>
+        <th>Quantity</th>
+        <th>Price</th>
+        <tbody id="data">
+
+        </tbody>
+
+    </thead>
+</table>
+    </section >
 
     
 </body>
