--- a/page5.html
+++ b/page5.html
@@ -69,8 +69,8 @@
                 <div class="sz"><button id="b3" onclick="tgl3">UK 8</button></div>
                 <div class="sz"><button id="b4" onclick="tgl4">UK 9</button></div>
                 <div class="sz"><button id="b5" onclick="tgl5">UK 10</button></div>
-                <div class="sz"><button id="b6">UK 11</button></div>
-                <div class="sz"><button id="b7">UK 12</button></div>
+                <div class="sz"><button id="b6" onclick="tgl6">UK 11</button></div>
+                <div class="sz"><button id="b7" onclick="tgl7">UK 12</button></div>
             </div>
             <section class="sec12sec1">
                 <div class="sec12quantity"><b>Quantity : </b><input type="number" name="" id="" min="1" max="99" ></div>
