--- a/page5.html
+++ b/page5.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<style>
+    .abc{
+    background-color:black;
+    font-size: 15px;
+    color: white;
+}
+</style>
 
 </head>
 <body>
@@ -80,5 +87,7 @@
         </div>
     </section>
     <h1 align="center" class="sec13">Similar Product</h1>
+
+    <script src="project.js"></script>
 </body>
 </html>
