--- a/page6.html
+++ b/page6.html
@@ -59,14 +59,12 @@
 <table border="" align="center">
     <thead>
         <th>Name</th>
+        <th>Product</th>
         <th>Size</th>
         <th>Quantity</th>
         <th>Price</th>
-        <tbody id="data">
-
-        </tbody>
-
     </thead>
+    <tbody id="data"></tbody>
 </table>
     </section >
 
