--- a/page5.html
+++ b/page5.html
@@ -81,12 +81,63 @@
             </div>
             <section class="sec12sec1">
                 <div class="sec12quantity"><b>Quantity : </b><input type="number" name="" id="" min="1" max="99" ></div>
-                <div class="sec12buy"><a href="page4.html"><button>Buy</button></a></div>
+                <div class="sec12buy"><a href="page4.html"><button onclick="order()">Buy</button></a></div>
             </section>
         </div>
         </div>
     </section>
     <h1 align="center" class="sec13">Similar Product</h1>
+    <section class="productgrid2">
+        <a href="page5.html" style="text-decoration: none;">
+            <div class="product">
+                <img src="product/p1.png" alt="coogre" height="100x" width="150px">
+                <div class="name">Nike Air Zoom</div>
+                <div class="price">$300.<sub>00</sub></div>
+                <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div></div>
+        </a>
+        <div class="product">
+            <img src="product/p2.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Adidas snake</div>
+            <div class="price">$150.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></div></div>
+        <div class="product">
+            <img src="product/p3.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Adidas Superstar Superfinger</div>
+            <div class="price">$250.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div></div>
+        <div class="product">
+            <img src="product/p4.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Jordon Black Metallic</div>
+            <div class="price">$170.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div></div>
+        <div class="product">
+            <img src="product/p5.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Jordan Hyper Jade</div>
+            <div class="price">$175.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></i></div></div>
+         <div class="product">
+            <img src="product/p6.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Nike Air Flight</div>
+            <div class="price">$200.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></i></div></div>
+        <div class="product">
+            <img src="product/p7.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Nike Air Force</div>
+            <div class="price">$350.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></i></div></div>
+        <div class="product">
+            <img src="product/p8.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Nike Sb Dunk</div>
+            <div class="price">$300.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div></div>
+        <div class="product">
+            <img src="product/p9.png" alt="coogre" height="100x" width="150px">
+            <div class="name">Adidas Terrex Trailmaker</div>
+            <div class="price">$320.<sub>00</sub></div>
+            <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div></div>
+            
+    </section>
+
 
     <script src="project.js"></script>
 </body>
