--- a/page7.html
+++ b/page7.html
@@ -129,6 +129,40 @@
             <div class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div></div>
             
     </section>
+    <section class="sec8">
+        <div class="comp">
+            <h1>Company</h1>
+            <p class="mf">About</p>
+            <p class="mf">Our Shops</p>
+            <p class="mf">News</p>
+            <p class="mf">Delivery</p>
+        </div>
+        <div class="help">
+            <h1>Help</h1>
+            <p class="mf">Contact Us</p>
+            <p class="mf">FQS</p>
+            <p class="mf">Help</p>
+            <p class="mf">Terms</p>
+        </div>
+        <div class="getsocial">
+            <h1>Get Social</h1>
+            <p class="mf"> <i class="fa-brands fa-facebook-f"></i> &nbsp Facebook</p>
+            <p class="mf"> <i class="fa-brands fa-twitter"></i>&nbsp Twitter</p>
+            <p class="mf"> <i class="fa-brands fa-instagram"></i>&nbsp Instagram</p>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p class="mf">7/4 Fire Briagde Road <br> Kulna.9100.India</p>
+            <h1>Phone : </h1><p class="mf"> 123-456-789 </p>
+            <h1>Email : </h1> <p class="mf">support@domain.com </p>
+        </div>
+
+    </section>
+    <section class="sec9">
+        <div class="sec9div1">Copyright 2016. All Rights Reserved.</div>
+        <div class="sec9div2"><input type="text" placeholder="Subscribe to our newsletter: " class="sub"> <button class="arrow"><i class="fa-solid fa-arrow-right"></i></button></div>
+    </section>
+
 
 
     <script src="project.js"></script>
