--- a/page8.html
+++ b/page8.html
@@ -9,14 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<style>
-    .abc{
-    background-color:black;
-    font-size: 15px;
-    color: white;
-}
-</style>
-
 </head>
 <body>
     <input type="checkbox" name="" id="check">
@@ -62,14 +54,14 @@
     </nav>
 
     <section class="sec12">
-        <div class="img"><img src="product/p1.png" alt="" height="400px" width="500px"></div>
+        <div class="img"><img src="product/p3.png" alt="" height="400px" width="500px"></div>
         <div class="detail">
-            <div class="sec12name">Nike Air Zoom</div>
+            <div class="sec12name">Adidas Superstar Superfinger</div>
 
-            <div class="sec12price"><b>Price : </b>$300.00</div>
+            <div class="sec12price"><b>Price : </b>$150.00</div>
             <div class="sec12stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div>
             <div class="sec12about"><h1 align="center">Product Details</h1></div>
-            <div class="sec12details">The Adidas Terrex Trailmaker 2 Gore-Tex Legend Ivy / Silver Green is a versatile trail running shoe that excels in both functionality and style, designed for outdoor enthusiasts who crave performance and comfort on varying terrains. This iteration of the Trailmaker series is engineered with the renowned Gore-Tex material, providing exceptional waterproofing and breathability, which ensures your feet stay dry and comfortable even in the wettest of conditions. Its lightweight construction minimizes fatigue, making it ideal for long-distance trails where endurance is key. Enhanced by a robust Continental rubber outsole, the shoe offers superior grip and traction, allowing adventurers to confidently tackle slippery rocks, muddy paths, and steep inclines.</div>
+            <div class="sec12details">The Adidas Superstar Superfinger Legend Ivy / Silver Green is a versatile trail running shoe that excels in both functionality and style, designed for outdoor enthusiasts who crave performance and comfort on varying terrains. This iteration of the Trailmaker series is engineered with the renowned Gore-Tex material, providing exceptional waterproofing and breathability, which ensures your feet stay dry and comfortable even in the wettest of conditions. Its lightweight construction minimizes fatigue, making it ideal for long-distance trails where endurance is key. Enhanced by a robust Continental rubber outsole, the shoe offers superior grip and traction, allowing adventurers to confidently tackle slippery rocks, muddy paths, and steep inclines.</div>
             <div class="sec12size"><h1>Sizes</h1>
                 <div class="sz"><button id="b1" onclick="tgl1()">UK 6</button></div>
                 <div class="sz"><button id="b2" onclick="tgl2()">UK 7</button></div>
@@ -173,5 +165,6 @@
 
 
     <script src="project.js"></script>
+    
 </body>
 </html>
