--- a/page6.html
+++ b/page6.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="pbody">
     <input type="checkbox" name="" id="check">
     <nav class="navbar1"> 
         <div>Free shipping over 100$</div>
@@ -58,11 +58,15 @@
         
 <table border="" align="center">
     <thead>
-        <th>Name</th>
-        <th>Product</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Product Name</th>
         <th>Size</th>
         <th>Quantity</th>
         <th>Price</th>
+        <th>Total</th>
+        <th>Remove</th>
     </thead>
     <tbody id="data"></tbody>
 </table>
