--- a/page5.html
+++ b/page5.html
@@ -62,28 +62,46 @@
     </nav>
 
     <section class="sec12">
-        <div class="img"><img src="product/p1.png" alt="" height="400px" width="500px"></div>
+        <div class="img">
+            <img src="product/p1.png" alt="" height="400px" width="500px">
+        </div>
         <div class="detail">
             <div class="sec12name">Nike Air Zoom</div>
-
             <div class="sec12price"><b>Price : </b>$300.00</div>
-            <div class="sec12stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star-half-stroke"></i></div>
-            <div class="sec12about"><h1 align="center">Product Details</h1></div>
-            <div class="sec12details">The Adidas Terrex Trailmaker 2 Gore-Tex Legend Ivy / Silver Green is a versatile trail running shoe that excels in both functionality and style, designed for outdoor enthusiasts who crave performance and comfort on varying terrains. This iteration of the Trailmaker series is engineered with the renowned Gore-Tex material, providing exceptional waterproofing and breathability, which ensures your feet stay dry and comfortable even in the wettest of conditions. Its lightweight construction minimizes fatigue, making it ideal for long-distance trails where endurance is key. Enhanced by a robust Continental rubber outsole, the shoe offers superior grip and traction, allowing adventurers to confidently tackle slippery rocks, muddy paths, and steep inclines.</div>
-            <div class="sec12size"><h1>Sizes</h1>
-                <div class="sz"><button id="b1" onclick="tgl1()">UK 6</button></div>
-                <div class="sz"><button id="b2" onclick="tgl2()">UK 7</button></div>
-                <div class="sz"><button id="b3" onclick="tgl3()">UK 8</button></div>
-                <div class="sz"><button id="b4" onclick="tgl4()">UK 9</button></div>
-                <div class="sz"><button id="b5" onclick="tgl5()">UK 10</button></div>
-                <div class="sz"><button id="b6" onclick="tgl6()">UK 11</button></div>
-                <div class="sz"><button id="b7" onclick="tgl7()">UK 12</button></div>
+            <div class="sec12stars">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star-half-stroke"></i>
             </div>
+
+            <div class="sec12about">
+                <h1 align="center">Product Details</h1>
+            </div>
+            <div class="sec12details">
+                The Nike Air Zoom is a high-performance sports shoe designed for comfort and speed...
+            </div>
+
+            <div class="sec12size">
+                <h1>Sizes</h1>
+                <div class="sz"><button id="b1" onclick="selectSize('UK 6', 'b1')">UK 6</button></div>
+                <div class="sz"><button id="b2" onclick="selectSize('UK 7', 'b2')">UK 7</button></div>
+                <div class="sz"><button id="b3" onclick="selectSize('UK 8', 'b3')">UK 8</button></div>
+                <div class="sz"><button id="b4" onclick="selectSize('UK 9', 'b4')">UK 9</button></div>
+                <div class="sz"><button id="b5" onclick="selectSize('UK 10', 'b5')">UK 10</button></div>
+                <div class="sz"><button id="b6" onclick="selectSize('UK 11', 'b6')">UK 11</button></div>
+                <div class="sz"><button id="b7" onclick="selectSize('UK 12', 'b7')">UK 12</button></div>
+            </div>
+
             <section class="sec12sec1">
-                <div class="sec12quantity"><b>Quantity : </b><input type="number" name="" id="" min="1" max="99" ></div>
-                <div class="sec12buy"><a href="page4.html"><button onclick="order()">Buy</button></a></div>
+                <div class="sec12quantity">
+                    <b>Quantity:</b> <input type="number" id="quan" min="1" max="99" class="quan">
+                </div>
+                <div class="sec12buy">
+                    <button onclick="order()">Buy</button>
+                </div>
             </section>
-        </div>
         </div>
     </section>
     <h1 align="center" class="sec13">Similar Product</h1>
