--- a/page6.html
+++ b/page6.html
@@ -48,7 +48,7 @@
         </label>
         <div>
             <ul>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
+                <li><a href="page6.html"><i class="fa-solid fa-cart-shopping"></i></a></i></li>
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
         </div>
@@ -60,9 +60,7 @@
     <thead>
         <th>Id</th>
         <th>First Name</th>
-        <th>Last Name</th>
         <th>Product Name</th>
-        <th>Size</th>
         <th>Quantity</th>
         <th>Price</th>
         <th>Total</th>
