--- a/page2.html
+++ b/page2.html
@@ -48,7 +48,7 @@
         </label>
         <div>
             <ul>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
+                <li><a href="page6.html"><i class="fa-solid fa-cart-shopping"></i></a></i></li>
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
         </div>
