--- a/page6.html
+++ b/page6.html
@@ -66,7 +66,7 @@
         <th>Total</th>
         <th>Remove</th>
     </thead>
-    <tbody id="data"></tbody>
+    <tbody id="displaydata"></tbody>
 </table>
     </section >
 
