--- a/page7.html
+++ b/page7.html
@@ -72,8 +72,8 @@
                 <div class="sz"><button id="b7" onclick="tgl7()">UK 12</button></div>
             </div>
             <section class="sec12sec1">
-                <div class="sec12quantity"><b>Quantity : </b><input type="number" name="" id="" min="1" max="99" ></div>
-                <div class="sec12buy"><a href="page4.html"><button onclick="order()">Buy</button></a></div>
+                <div class="sec12quantity"><b>Quantity : </b><input type="number" name="" id="quan1" min="1" max="99" ></div>
+                <div class="sec12buy"><a href="page4.html"><button onclick="order1()">Buy</button></a></div>
             </section>
         </div>
         </div>
