--- a/page9.html
+++ b/page9.html
@@ -9,9 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<style>
+    .abc{
+    background-color:black;
+    font-size: 15px;
+    color: white;
+}
+</style>
 
 </head>
-<body class="pbody">
+<body>
     <input type="checkbox" name="" id="check">
     <nav class="navbar1"> 
         <div>Free shipping over 100$</div>
@@ -53,23 +60,49 @@
             </ul>
         </div>
     </nav>
-    <hr>
-    <section id="sec14">
-        
-<table border="" align="center">
-    <thead>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Product Name</th>
-        <th>Quantity</th>
-        <th>Price</th>
-        <th>Total</th>
-        <th>Remove</th>
-    </thead>
-    <tbody id="displaydata"></tbody>
-</table>
-    </section >
-    <h1 align="center"><a href="page9.html"><button class="View">Order now</button></a></h1>
+
+    <hr color="black">
+    <section class="bd">
+        <div class="confirmation-container">
+            <h1>Order Placed Successfully!</h1>
+            <p>Thank you for your purchase. Your order is being processed and will be shipped to you shortly.</p>
+            <a href="index.html">Return to Home</a>
+        </div>
+    </section>
+    <section class="sec8">
+        <div class="comp">
+            <h1>Company</h1>
+            <p class="mf">About</p>
+            <p class="mf">Our Shops</p>
+            <p class="mf">News</p>
+            <p class="mf">Delivery</p>
+        </div>
+        <div class="help">
+            <h1>Help</h1>
+            <p class="mf">Contact Us</p>
+            <p class="mf">FQS</p>
+            <p class="mf">Help</p>
+            <p class="mf">Terms</p>
+        </div>
+        <div class="getsocial">
+            <h1>Get Social</h1>
+            <p class="mf"> <i class="fa-brands fa-facebook-f"></i> &nbsp Facebook</p>
+            <p class="mf"> <i class="fa-brands fa-twitter"></i>&nbsp Twitter</p>
+            <p class="mf"> <i class="fa-brands fa-instagram"></i>&nbsp Instagram</p>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p class="mf">7/4 Fire Briagde Road <br> Kulna.9100.India</p>
+            <h1>Phone : </h1><p class="mf"> 123-456-789 </p>
+            <h1>Email : </h1> <p class="mf">support@domain.com </p>
+        </div>
+
+    </section>
+    <section class="sec9">
+        <div class="sec9div1">Copyright 2016. All Rights Reserved.</div>
+        <div class="sec9div2"><input type="text" placeholder="Subscribe to our newsletter: " class="sub"> <button class="arrow"><i class="fa-solid fa-arrow-right"></i></button></div>
+    </section>
+
 
     <script src="project.js"></script>
 </body>
