--- a/page7.html
+++ b/page7.html
@@ -73,7 +73,7 @@
             </div>
             <section class="sec12sec1">
                 <div class="sec12quantity"><b>Quantity : </b><input type="number" name="" id="quan1" min="1" max="99" ></div>
-                <div class="sec12buy"><a href="page4.html"><button onclick="order1()">Buy</button></a></div>
+                <div class="sec12buy"><button onclick="order1()">Buy</button></div>
             </section>
         </div>
         </div>
